# am-i-tired

./: .gitignore  Dockerfile  README.md
ai/: clip.py  dl.py  face.py  vit.py  vivit.py
ai-server/: .gitignore  Cargo.toml  model.py  server.py
ai-server-old/: requirements.txt  server.py
ai-server/src/: main.rs
backend/: .gitignore  Cargo.toml  Dockerfile  fly.toml
backend/migrations/: 20240420163108_users.up.sql
backend/src/: main.rs
frontend/: .dockerignore  .gitignore  Dockerfile  fly.toml  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/: resultMap.ts
frontend/src/components/: ResultsTab.vue  SideBar.vue  TopBar.vue  VideoPlayer.vue  WaitQueue.vue
frontend/src/router/: index.ts
frontend/src/views/: 404View.vue  AboutView.vue  AppView.vue  HomeView.vue  LoginView.vue
